--- a/NewWins/css/styles.css
+++ b/NewWins/css/styles.css
@@ -1,68 +1,77 @@
-/* Estilo personalizado para el navbar */
-.navbar {
-    background-color: #ff4b4b;
-    /* Rojo */
+/* Estilo para el logo fuera del navbar */
+.navbar-brand.outside-brand {
+    position: absolute;
+    top: 0;
+    left: 0;
+    padding: 5px;
+    z-index: 1000;
 }
 
-.navbar-brand,
-.nav-link,
-.dropdown-toggle {
-    color: #ffffff !important;
-    /* Blanco */
+.navbar-brand.outside-brand img {
+    max-height: 90px;
 }
+
+/* Estilo para el navbar */
+.navbar {
+    background-color: #000;
+    padding-left: 200px;
+    /* Ajusta el padding para evitar solapamiento con el logo */
+}
+
+.navbar-nav {
+    margin-left: auto;
+    /* Empuja los elementos hacia la derecha */
+}
+
+.navbar-nav .nav-link {
+    color: #fff !important;
+    /* Letras blancas */
+    margin-right: 20px;
+    /* Espacio entre los enlaces */
+    transition: color 0.3s ease;
+    /* Transición suave para el cambio de color */
+}
+
+.navbar-nav .nav-link:hover {
+    color: #bbb !important;
+    /* Color al pasar el mouse */
+}
+
+/* Estilo para el dropdown */
 .dropdown-toggle {
-    background-color: #ffffff;
-    /* Fondo blanco */
-    color: #ffffff !important;
-    /* Letra roja */
-    border: 1px solid #dc3545;
-    /* Borde rojo */
+    color: #fff;
+    /* Color del ícono del usuario */
+    background-color: transparent;
+    /* Fondo transparente para el botón */
+    border: none;
+    /* Sin borde */
 }
 
 .dropdown-toggle:hover {
-    background-color: #dc3545;
-    /* Fondo rojo al pasar el ratón */
-    color: #ffffff !important;
-    /* Letra blanca al pasar el ratón */
-}
-.nav-link:hover,
-.dropdown-item:hover {
-    color: #ff4b4b !important;
-    /* Rojo */
-    background-color: #ffffff !important;
-    /* Blanco */
+    color: #fff;
+    /* Color del ícono del usuario */
+    background-color: transparent;
+    /* Fondo transparente para el botón */
+    border: none;
+    /* Sin borde */
 }
 
-.dropdown-menu {
-    background-color: #ff4b4b;
-    /* Rojo */
-    margin-left: -45px;
-    /* Ajusta este valor según sea necesario */
-}
-
-.dropdown-item {
-    color: #ffffff;
-    /* Blanco */
-}
-
-.dropdown-item:hover {
-    background-color: #ffffff;
-    /* Blanco */
-    color: #ff4b4b !important;
-    /* Rojo */
-}
-
-.navbar-toggler {
-    border-color: #ffffff;
-    /* Blanco */
-}
-
+/* Estilo específico para el ícono del menú desplegable cuando se vuelve responsivo */
 .navbar-toggler-icon {
-    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3E%3Cpath stroke='rgba%28255, 255, 255, 0.5%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3E%3C/svg%3E");
+    background-image: url("data:image/svg+xml,%3csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3e%3cpath stroke='%23ff4b4b' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
+    /* Ícono del botón del menú desplegable con color rojo */
 }
 
-
-
+.navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
+    background-image: url("data:image/svg+xml,%3csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3e%3cpath stroke='%23ff4b4b' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M23 7l-9 9 9 9'/%3e%3cpath stroke='%23ff4b4b' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M9 7l9 9-9 9'/%3e%3c/svg%3e");
+    /* Ícono del botón del menú desplegable con color rojo cuando está abierto */
+}
+/* Ajuste del margen izquierdo para el menú desplegable */
+.navbar .dropdown-menu {
+    margin-left: -85px;
+    /* Ajusta el margen izquierdo según sea necesario */
+}
+        
 /*admin_dasboard*/
 
 
@@ -220,7 +229,7 @@
 
 /* Estilo para las filas de encabezado */
 .table th {
-    background-color: #ff4b4b;
+    background-color: #212529;
     /* Rojo */
     color: #fff;
     /* Texto blanco */
@@ -287,7 +296,7 @@
 
 /* Estilo para las filas de encabezado */
 .table th {
-    background-color: #ff4b4b;
+    background-color: #000;
     /* Rojo */
     color: #fff;
     /* Texto blanco */
